[VAS-1113] feat: Improvement get available CI for station api (#56)
* [VAS-1113] updated model

* [VAS-1113] updated get available creditor institutions for station API

* [VAS-1113] fixed db schema

* [VAS-1113] updated unit tests

* [VAS-1113] updated openapi

* Bump to version 1.11.4-1-VAS-1113-improvement-get-available-ci-for-station-api [skip ci]

---------

Co-authored-by: pagopa-github-bot <github-bot@pagopa.it>